--- a/index.html
+++ b/index.html
@@ -32,109 +32,33 @@
               >
             </div>
           </div>
-          <div class="panel panel-primary">
-            <div class="panel-heading">Select Pump</div>
+          <div class="panel panel-primary" id="section-2">
+            <div class="panel-heading">Select Pump Logo</div>
             <div class="panel-body">
               <label class="radio-inline"
-                ><input type="radio" name="pump" checked />Indian Oil</label
+                ><input
+                  type="radio"
+                  name="pumpLogo"
+                  checked
+                  value="/assets/images/pump-logo-indian-oil.webp"
+                />Indian Oil</label
               >
               <label class="radio-inline"
-                ><input type="radio" name="pump" />Hp</label
+                ><input
+                  type="radio"
+                  name="pumpLogo"
+                  value="/assets//images/pump-logo-hp.webp"
+                />Hp</label
               >
               <label class="radio-inline"
-                ><input type="radio" name="pump" disabled />Custom</label
+                ><input type="radio" name="pumpLogo" disabled />Custom</label
               >
             </div>
           </div>
-          <div class="panel panel-primary" id="data-panel">
+          <div class="panel panel-primary" id="section-3">
             <div class="panel-heading">Enter Data</div>
             <div class="panel-body">
-              <div class="form-group">
-                <label for="address">Address</label
-                ><input type="text" class="form-control" name="address" />
-              </div>
-              <div class="row">
-                <div class="form-group col-md-4">
-                  <label for="receiptNo">Receipt No</label
-                  ><input type="text" class="form-control" name="receiptNo" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="localId">Local ID</label
-                  ><input type="text" class="form-control" name="localId" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="fipNo">FIP No</label
-                  ><input type="text" class="form-control" name="fipNo" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="nozzelNo">Nozzle No</label
-                  ><input type="text" class="form-control" name="nozzelNo" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="product">Product</label
-                  ><input type="text" class="form-control" name="product" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="presetType">Preset Type</label
-                  ><input type="text" class="form-control" name="presetType" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="rate">Rate</label
-                  ><input type="text" class="form-control" name="rate" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="volume">Volume</label
-                  ><input type="text" class="form-control" name="volume" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="atot">Atot</label
-                  ><input type="text" class="form-control" name="atot" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="vtot">Vtot</label
-                  ><input type="text" class="form-control" name="vtot" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="vehicleNo">Vehicle No</label
-                  ><input type="text" class="form-control" name="vehicleNo" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="mobileNo">Mobile No</label
-                  ><input type="text" class="form-control" name="mobileNo" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="date">Date</label
-                  ><input type="text" class="form-control" name="date" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="time">Time</label
-                  ><input type="text" class="form-control" name="time" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="cstNo">CST No</label
-                  ><input type="text" class="form-control" name="cstNo" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="lstNo">LST No</label
-                  ><input type="text" class="form-control" name="lstNo" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="vatNo">VAT No</label
-                  ><input type="text" class="form-control" name="vatNo" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="attendantId">Attendant ID</label
-                  ><input type="text" class="form-control" name="attendantId" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="fccDate">FCC Date</label
-                  ><input type="text" class="form-control" name="fccDate" />
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="fccTime">FCC Time</label
-                  ><input type="text" class="form-control" name="fccTime" />
-                </div>
-              </div>
+              <div class="row"></div>
             </div>
           </div>
           <button type="button" class="btn btn-default" disabled>
@@ -147,26 +71,23 @@
           <button type="button" class="btn btn-default" disabled>
             Download
           </button>
-          <!-- <button type="button" class="btn btn-primary">Primary</button>
-          <button type="button" class="btn btn-success">Success</button>
-          <button type="button" class="btn btn-info">Info</button>
-          <button type="button" class="btn btn-warning">Warning</button>
-          <button type="button" class="btn btn-danger">Danger</button>
-          <button type="button" class="btn btn-link">Link</button> -->
         </div>
         <div class="col-md-4" id="template-container"></div>
       </div>
     </div>
 
+    <script src="/assets//js/field.js"></script>
     <script src="/assets/js/common.js"></script>
     <script src="templates/AbstractTemplate.js"></script>
-    <script src="templates/templates.js"></script>
     <script src="templates/template-1/Template1.js"></script>
     <script>
+      const templates = [new Template1("template-container")];
+      const templateIndex = 0;
+
       window.onload = () => {
-        const template = new Template1("template-container");
-        template.render();
-        // template.renderData({});
+        addInputFieldElements("#section-3 > .panel-body > .row", fields);
+        loadDefaultData("#section-3", fields);
+        generate(templates[templateIndex]);
       };
     </script>
   </body>
