--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="/assets/css/common.css" />
+    <link rel="stylesheet" href="assets/css/common.css" />
+    <base href="/" />
   </head>
   <body class="bg-light">
     <div class="container">
@@ -37,14 +38,14 @@
                   type="radio"
                   name="pumpLogo"
                   checked
-                  value="/assets/images/pump-logo-indian-oil.webp"
+                  value="assets/images/pump-logo-indian-oil.webp"
                 />Indian Oil</label
               >
               <label class="radio-inline"
                 ><input
                   type="radio"
                   name="pumpLogo"
-                  value="/assets//images/pump-logo-hp.webp"
+                  value="assets//images/pump-logo-hp.webp"
                 />Hp</label
               >
               <label class="radio-inline"
@@ -84,11 +85,10 @@
         </div>
       </div>
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="/assets//js/field.js"></script>
-    <script src="/assets/js/common.js"></script>
+    <script src="assets//js/field.js"></script>
+    <script src="assets/js/common.js"></script>
     <script src="templates/AbstractTemplate.js"></script>
     <script src="templates/template-1/Template1.js"></script>
     <script>
