--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="assets/css/common.css" />
-    <base href="/" />
+    <!-- <base href="/" /> -->
   </head>
   <body class="bg-light">
     <div class="container">
