--- a/index.html
+++ b/index.html
@@ -45,8 +45,15 @@
                 ><input
                   type="radio"
                   name="pumpLogo"
-                  value="assets//images/pump-logo-hp.webp"
-                />Hp</label
+                  value="assets/images/pump-logo-hp.webp"
+                />Hp Oil</label
+              >
+              <label class="radio-inline"
+                ><input
+                  type="radio"
+                  name="pumpLogo"
+                  value="assets/images/pump-logo-bharat-petroleum.webp"
+                />Bharat Petroleum</label
               >
               <label class="radio-inline"
                 ><input type="radio" name="pumpLogo" disabled />Custom</label
