--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="panel panel-primary" id="section-3">
-            <div class="panel-heading">Tax Details</div>
+            <div class="panel-heading">Show-Hide</div>
             <div class="panel-body">
               <label class="checkbox-inline"
                 ><input type="checkbox" name="showGST" value="true" />GSTIN
