--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="assets/css/common.css" />
-    <!-- <base href="/" /> -->
   </head>
   <body class="bg-light">
     <div class="container">
@@ -37,86 +36,15 @@
           </div>
           <div class="panel panel-primary" id="section-paper-texture">
             <div class="panel-heading">Select Paper Texture</div>
-            <div class="panel-body">
-              <!-- <label class="radio-inline"
-                ><input
-                  type="radio"
-                  name="texture"
-                  value="assets/images/textures/texture-1.jpeg"
-                />Texture 1</label
-              >
-              <label class="radio-inline"
-                ><input
-                  type="radio"
-                  name="texture"
-                  checked
-                  value="assets/images/textures/texture-2.jpeg"
-                />Texture 2</label
-              > -->
-            </div>
+            <div class="panel-body"></div>
           </div>
           <div class="panel panel-primary" id="section-pump-logo">
             <div class="panel-heading">Select Pump Logo</div>
-            <div class="panel-body">
-              <!-- <label class="radio-inline"
-                ><input
-                  type="radio"
-                  name="pumpLogo"
-                  checked
-                  value="assets/images/pump-logo-indian-oil.webp"
-                />Indian Oil</label
-              >
-              <label class="radio-inline"
-                ><input
-                  type="radio"
-                  name="pumpLogo"
-                  value="assets/images/pump-logo-hp.webp"
-                />Hp Oil</label
-              >
-              <label class="radio-inline"
-                ><input
-                  type="radio"
-                  name="pumpLogo"
-                  value="assets/images/pump-logo-bharat-petroleum.webp"
-                />Bharat Petroleum</label
-              >
-              <label class="radio-inline"
-                ><input type="radio" name="pumpLogo" disabled />Custom</label
-              > -->
-            </div>
+            <div class="panel-body"></div>
           </div>
           <div class="panel panel-primary" id="section-optional-fields">
             <div class="panel-heading">Optinal Fields</div>
-            <div class="panel-body">
-              <!-- <label class="checkbox-inline"
-                ><input type="checkbox" name="showGST" value="true" />GSTIN
-                No.</label
-              >
-              <label class="checkbox-inline"
-                ><input
-                  type="checkbox"
-                  name="showCST"
-                  value="true"
-                  checked
-                />CST No</label
-              >
-              <label class="checkbox-inline"
-                ><input
-                  type="checkbox"
-                  name="showLST"
-                  value="true"
-                  checked
-                />LST No</label
-              >
-              <label class="checkbox-inline"
-                ><input
-                  type="checkbox"
-                  name="showVAT"
-                  value="true"
-                  checked
-                />VAT No</label
-              > -->
-            </div>
+            <div class="panel-body"></div>
           </div>
           <div class="panel panel-primary" id="section-data">
             <div class="panel-heading">Enter Data</div>
