--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             Reset
           </button>
           <button type="button" class="btn btn-default" id="generate">
-            Generate
+            Preview
           </button>
           <button type="button" class="btn btn-default" disabled>
             Download
