--- a/index.html
+++ b/index.html
@@ -113,9 +113,13 @@
           await onTemplateSelected();
         });
 
-        // $(document).on("click", "input[name=texture]", async function () {
-        //   await onTemplateSelected();
-        // });
+        $(document).on("click", "input[name=texture]", async function () {
+          generate(template);
+        });
+
+        $(document).on("click", "input[name=pumpLogo]", async function () {
+          generate(template);
+        });
       });
 
       async function onInit() {
